--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -16,6 +16,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<start-class>com.chris.rest.webservices</start-class>
 	</properties>
 
 	<dependencies>
