Edit pom.xml file

--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -53,10 +53,25 @@
 	</dependencies>
 
 	<build>
+		<resources>
+			<resource>
+				<directory>Backend/src/main/resources</directory>
+			</resource>
+		</resources>
+		
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>3.0.1</version>
+				
+				<executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals><goal>copy-dependencies</goal></goals>
+                    </execution>
+                </executions>
 			</plugin>
 		</plugins>
 	</build>
