--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,11 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>restful-web-services</name>
 	<description>Demo project for Spring Boot</description>
-
+	
 	<properties>
 		<java.version>1.8</java.version>
+		<main.basedir>${project.basedir}</main.basedir>
+		<start-class>com.chris.rest.webservices</start-class>
 	</properties>
 
 	<dependencies>
@@ -46,10 +48,17 @@
 	</dependencies>
 
 	<build>
+		<resources>
+			<resource>
+				<directory>Backend/src/main/java/com/chris/rest/webservices/restfulwebservices</directory>
+			</resource>
+		</resources>
+		
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>2.1.6.RELEASE</version>
 			</plugin>
 		</plugins>
 	</build>
