--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,16 @@
 		<version>2.1.5.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+	<packaging>pom</packaging>
 	<groupId>com.chris.rest.webservices</groupId>
 	<artifactId>restful-web-services</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>restful-web-services</name>
 	<description>Demo project for Spring Boot</description>
+	
+	<modules>
+        <module>Backend</module>
+    </modules>
 	
 	<properties>
 		<java.version>1.8</java.version>
