--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -52,6 +52,23 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>2.1.6.RELEASE</version>
 			</plugin>
+			
+			<plugin>
+				<groupId>com.heroku.sdk</groupId>
+				<artifactId>heroku-maven-plugin</artifactId>
+				<version>2.0.3</version>
+				<configuration>
+					<includeTarget>false</includeTarget>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>deploy</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
 		</plugins>
 	</build>
 
